# imgapp-rust

./: .env-sample  Cargo.toml  README.md
src/: main.rs
static/: index.html
static/css/: main.css
static/favicon/: site.webmanifest
static/js/: app.js  jquery.js  main.js  utils.js
