[package]
name = "website_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
env_logger = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
home = "0.5.9"
log = "0.4.20"
sha2 = "0.10.8"
